# Rewave

./: .gitignore  Cargo.toml  LICENSE  README.md  REWRITE-PLAN.md  Rewave.md  check.ps1  check.sh  skills-lock.json
.superpowers/brainstorm/576-1784730279/content/: aesthetic-directions-2.html  aesthetic-directions.html  dark-light.html  fresh-design.html  layout.html  visual-style.html
.superpowers/brainstorm/576-1784730279/state/: server-stopped
docs/superpowers/specs/: 2026-07-23-rewave-tauri-design.md
rewave-app/: Cargo.toml  tauri.conf.json
rewave-app/src/: main.rs
rewave-core/: Cargo.toml
rewave-core/src/: lib.rs  stats.rs
rewave-core/src/audio/: mod.rs
rewave-core/src/connection/: orchestrator.rs
rewave-core/src/crypto/: constants.rs  ecdh.rs  hkdf.rs  mod.rs  session.rs
rewave-core/src/discovery/: broadcast.rs  mdns.rs  mod.rs
rewave-core/src/pairing/: flow.rs  mod.rs  store.rs
rewave-core/src/protocol/: control.rs  datagram.rs  dispatch.rs  mod.rs
rewave-core/src/wifi/: mod.rs
rewave-core/tests/: crypto_vectors.rs  discovery_integration.rs  orchestrator.rs  pairing_integration.rs  protocol_vectors.rs  tofu_store.rs
rewave-core/tests/simreceiver/: mod.rs
rewave-ui/: index.html  package-lock.json  package.json
